--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Document</title>
+    <title>Positivus</title>
 </head>
 
 <body>
-    <header>
-        <h1>Webpack Template Is Ready</h1>
+    <header class="header">
+        <div class="header__inner container">
+            <a href="/" class="header__logo logo">
+                <img class="logo__image" src="images/logo.svg" alt="Positivus" width="220" height="36" loading="lazy">
+            </a>
+            <nav class="header__menu hidden-mobile">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item">
+                        <a class="header__menu-link" href="/">About us</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a class="header__menu-link" href="/">Services</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a class="header__menu-link" href="/">Use Cases</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a class="header__menu-link" href="/">Pricing</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a class="header__menu-link" href="/">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="header__button button button--transparent hidden-mobile" type="button">Request a
+                quote</button>
+            <button class="header__burger-button button__burger-menu visible-mobile" type="button"
+                onclick="mobileOverlay.showModal()">
+                <span class="visually-hidden">Open navigation menu</span>
+            </button>
+        </div>
     </header>
     <main>
-        <img src="img/code.png" alt="" width="100%" height="600" loading="lazy">
+
     </main>
     <footer>
-        <div class="image"></div>
-        <div class="img"></div>
+
     </footer>
+    <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
+        <form class="mobile-overlay__close-button-wrapper" method="dialog">
+            <button class="mobile-overlay__close-button cross-button" type="button">
+                <span class="viually-hidden">Close navigation menu</span>
+            </button>
+        </form>
+        <div class="mobile-overlay__body">
+            <ul class="mobile-overlay__list">
+                <li class="mobile-overlay__item">
+                    <a class="mobile-overlay__link" href="/">About us</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a class="mobile-overlay__link" href="/">Services</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a class="mobile-overlay__link" href="/">Use Cases</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a class="mobile-overlay__link" href="/">Pricing</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a class="mobile-overlay__link" href="/">Blog</a>
+                </li>
+            </ul>
+        </div>
+    </dialog>
 </body>
 
 </html>
