--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <!-- <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon.png" type="image/png"> -->
     <title>Positivus</title>
 </head>
 
 <body>
     <header class="header">
         <div class="header__inner container">
-            <a href="/" class="header__logo logo">
+            <a class="header__logo logo" href="/">
                 <img class="logo__image" src="images/logo.svg" alt="Positivus" width="220" height="36" loading="lazy">
             </a>
             <nav class="header__menu hidden-mobile">
