--- a/src/index.html
+++ b/src/index.html
@@ -37,22 +37,69 @@
             </nav>
             <button class="header__button button button--transparent hidden-mobile" type="button">Request a
                 quote</button>
-            <button class="header__burger-button button__burger-menu visible-mobile" type="button"
+            <button class="header__burger-button burger-button visible-mobile" type="button"
                 onclick="mobileOverlay.showModal()">
                 <span class="visually-hidden">Open navigation menu</span>
             </button>
         </div>
     </header>
-    <main>
-
+    <main class="content">
+        <section class="section section--hidden-x container">
+            <div class="section__body">
+                <div class="hero">
+                    <div class="hero__main">
+                        <div class="hero__body">
+                            <h1 class="hero__title">Navigating the digital landscape for success</h1>
+                            <div class="hero__description">
+                                <p>Our digital marketing agency helps businesses grow and succeed online through a range
+                                    of services including SEO, PPC, social media marketing, and content creation.</p>
+                            </div>
+                            <button class="hero__button button" type="button">Book a consultation</button>
+                        </div>
+                        <img class="hero__image" src="images/hero-bg.svg" alt="" width="600" height="515"
+                            loading="lazy">
+                    </div>
+                    <div class="hero__partners">
+                        <h2 class="visually-hidden">Our partners</h2>
+                        <ul class="hero__partners-list">
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/amazon.svg" alt="Amazon"
+                                    width="130" height="48" loading="lazy">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/dribble.svg" alt="Dribble"
+                                    width="130" height="48" loading="lazy">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/hubspot.svg" alt="HubSpot"
+                                    width="130" height="48" loading="lazy">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/notion.svg" alt="Notion"
+                                    width="130" height="48" loading="lazy">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/netflix.svg" alt="Netflix"
+                                    width="130" height="48" loading="lazy">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img class="hero__partners-image" src="images/partners/zoom.svg" alt="Zoom" width="130"
+                                    height="48" loading="lazy">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
+
     <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
         <form class="mobile-overlay__close-button-wrapper" method="dialog">
-            <button class="mobile-overlay__close-button cross-button" type="button">
-                <span class="viually-hidden">Close navigation menu</span>
+            <button class="mobile-overlay__close-button cross-button" type="submit">
+                <span class="visually-hidden">Close navigation menu</span>
             </button>
         </form>
         <div class="mobile-overlay__body">
