feat: add team section styles

--- a/src/index.html
+++ b/src/index.html
@@ -448,7 +448,7 @@
                                     <img class="team-card__image" src="images/team/1.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">John Smith</h3>
+                                        <h3 class="team-card__name h4">John Smith</h3>
                                         <p class="team-card__post">CEO and Founder</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
@@ -478,7 +478,7 @@
                                     <img class="team-card__image" src="images/team/2.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">Jane Doe</h3>
+                                        <h3 class="team-card__name h4">Jane Doe</h3>
                                         <p class="team-card__post">Director of Operations</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
@@ -508,7 +508,7 @@
                                     <img class="team-card__image" src="images/team/3.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">Michael Brown</h3>
+                                        <h3 class="team-card__name h4">Michael Brown</h3>
                                         <p class="team-card__post">CEO and Founder</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
@@ -538,7 +538,7 @@
                                     <img class="team-card__image" src="images/team/4.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">Emily Johnson</h3>
+                                        <h3 class="team-card__name h4">Emily Johnson</h3>
                                         <p class="team-card__post">PPC Manager</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
@@ -568,7 +568,7 @@
                                     <img class="team-card__image" src="images/team/5.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">Brian Williams</h3>
+                                        <h3 class="team-card__name h4">Brian Williams</h3>
                                         <p class="team-card__post">Social Media Specialist</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
@@ -598,7 +598,7 @@
                                     <img class="team-card__image" src="images/team/6.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
-                                        <h3 class="team-card__name">Sarah Kim</h3>
+                                        <h3 class="team-card__name h4">Sarah Kim</h3>
                                         <p class="team-card__post">Content Creator</p>
                                     </div>
                                     <a class="team-card__link" href="/" target="_blank">
