--- a/src/index.html
+++ b/src/index.html
@@ -445,7 +445,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/1.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-1.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">John Smith</h3>
@@ -475,7 +475,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/2.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-2.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">Jane Doe</h3>
@@ -505,7 +505,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/3.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-3.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">Michael Brown</h3>
@@ -535,7 +535,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/4.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-4.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">Emily Johnson</h3>
@@ -565,7 +565,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/5.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-5.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">Brian Williams</h3>
@@ -595,7 +595,7 @@
                         <li class="team__item">
                             <article class="team-card">
                                 <header class="team-card__header">
-                                    <img class="team-card__image" src="images/team/6.svg" alt="" width="100"
+                                    <img class="team-card__image" src="images/team/team-6.svg" alt="" width="100"
                                         height="100" loading="lazy">
                                     <div class="team-card__info">
                                         <h3 class="team-card__name h4">Sarah Kim</h3>
